THF-442: Fixing visible border on print layout

--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -217,6 +217,10 @@
   @media (min-width: $breakpoint-m) {
     flex-wrap: nowrap;
   }
+
+  @media print {
+    display: none;
+  }
 }
 
 @media (min-width: $breakpoint-s) {
